--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,18 @@
-log4j.rootLogger=INFO, file
+log4j.rootLogger=FATAL, file, H2
+
+#file appender
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=loging.log
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+#H2 appender
+log4j.appender.H2=org.apache.log4j.jdbc.JDBCAppender
+log4j.appender.H2.driver=org.h2.Driver
+log4j.appender.H2.user=sa
+log4j.appender.H2.password=sa
+log4j.appender.H2.URL=jdbc:h2:tcp://localhost/~/database
+log4j.appender.H2.sql=INSERT INTO LOGS VALUES('%x','%d{yyyy-MM-dd  HH:mm:ss.SSS}','%C','%p','%m')
+log4j.appender.H2.layout=org.apache.log4j.PatternLayout
