--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.epam.assylkhan</groupId>
-    <artifactId>carRent</artifactId>
+    <artifactId>car-rental</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
