--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=FATAL, file, H2
 
 #file appender
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=loging.log
+log4j.appender.file.File=D:/loging.log
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
