--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,33 @@
     <!--<welcome-file-list>-->
         <!--<welcome-file>welcome.jsp</welcome-file>-->
     <!--</welcome-file-list>-->
+    
+    <listener>
+        <listener-class>com.epam.listener.ContextListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>com.epam.listener.SessionListener</listener-class>
+    </listener>
+    
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>com.epam.filter.SecurityFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <servlet-name>Controller</servlet-name>
+    </filter-mapping>
+
+
+    <filter>
+        <filter-name>CharsetFilter</filter-name>
+        <filter-class>com.epam.filter.CharsetFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharsetFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 
     <servlet>
         <servlet-name>Controller</servlet-name>
