--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 
     <groupId>com.epam.assylkhan</groupId>
-    <artifactId>car-rent</artifactId>
+    <artifactId>auto-base</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
