--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
-url=jdbc:h2:tcp://localhost/~/database;LOCK_TIMEOUT=20000
+url=jdbc:h2:tcp://localhost/~/database;
 driver=org.h2.Driver
 user=sa
 password=sa
