--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,17 @@
     <listener>
         <listener-class>com.epam.listener.SessionListener</listener-class>
     </listener>
-    
+
+    <filter>
+        <filter-name>CharsetFilter</filter-name>
+        <filter-class>com.epam.filter.CharsetFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharsetFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
     <filter>
         <filter-name>SecurityFilter</filter-name>
         <filter-class>com.epam.filter.SecurityFilter</filter-class>
@@ -24,14 +34,13 @@
         <servlet-name>Controller</servlet-name>
     </filter-mapping>
 
-
     <filter>
-        <filter-name>CharsetFilter</filter-name>
-        <filter-class>com.epam.filter.CharsetFilter</filter-class>
+        <filter-name>FlashScopeFilter</filter-name>
+        <filter-class>com.epam.filter.FlashScopeFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>CharsetFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <filter-name>FlashScopeFilter</filter-name>
+        <servlet-name>Controller</servlet-name>
     </filter-mapping>
 
 
@@ -69,5 +78,4 @@
         <location>/do/error</location>
     </error-page>
     
-
 </web-app>
